[project]
name = "chat-history-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "ivkrak",email = "ivkrak@embersky.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pyrogram (>=2.0.106,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
